Archive2/92/06af33805baa90/output
main.cpp:13:62: error: 'typename std::enable_if<std::is_void<_Tp>::value, T>::type Foo<T>::foo()' cannot be overloaded
     typename std::enable_if<std::is_void<T>::value, T>::type foo() {
                                                              ^
main.cpp:9:63: error: with 'typename std::enable_if<(! std::is_void<_Tp>::value), T>::type Foo<T>::foo()'
     typename std::enable_if<!std::is_void<T>::value, T>::type foo() {
                                                               ^
main.cpp: In instantiation of 'struct Foo<void>':
main.cpp:19:15:   required from here
main.cpp:9:63: error: no type named 'type' in 'struct std::enable_if<false, void>'
main.cpp: In function 'int main()':
main.cpp:20:7: error: 'struct Foo<void>' has no member named 'foo'
     a.foo();
       ^
